# telemetry-json-loader

./: .gitignore  README.md  app_json.h  config.json  handcart_json.h  main.py  messages_json.h  pyproject.toml  telemetry_json.h
.github/workflows/: generate.yml
docs/: .pages  index.md
docs/Internal implementations/: .pages  connection.md  file_transmission.md  json_loading.md
docs/Overview/: .pages  features.md  report.md
docs/Setup and Installation/: .pages  installation.md  setup.md
json_input/: can_stat_json.json  communication_config.json  communication_messages.json  devices.json  gps_stat_json.json  session_config.json  telemetry_config.json  vehicle.json
json_input/app/: app_config.json
json_input/app_json/: app_config.json  user_data.json
json_input/handcart_json/: handcart_settings.json
json_input/messages/: basic_message.json  telemetry_status.json
json_input/messages_json/: car_data.json  command_execution.json  command_status.json  file_ask_transaction.json  file_begin_transaction.json  file_chunk.json  file_chunk_ack.json  file_end_transaction.json  file_response_transaction.json  get_telemetry_config.json  ping.json  telemetry_error.json  telemetry_status.json
json_input/tel/: session_config.json  telemetry_config.json
json_input/telemetry_config/: csv_parser_config.json  stat_json.json
json_input/telemetry_json/: car_config.json  car_setup.json  session_config.json  telemetry_config.json
json_loader/scripts/generators/: cpp_generator.py
json_loader/scripts/json_loader_cpp/: cpp_generator.py  generator.py  h_generator.py
(+4 files in other folders)
