[tool.poetry]
name = "json-loader"
version = "0.1.0"
description = "Code generator to generate json loader for c++"
authors = ["Filippo <pippo.faccini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
